--- a/SendMe/EmailTemplates/GeneralTemplate.html
+++ b/SendMe/EmailTemplates/GeneralTemplate.html
@@ -10,7 +10,7 @@
     </tr>
     <!------Body------>
     <tr>
-        <td align="center" style="background-color: #DADEE0; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5em; padding-top: 15%; padding-bottom: 15%">
+        <td align="left" style="background-color: #DADEE0; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5em; padding-top: 15%; padding-bottom: 15%">
 
                 {Message}
 
