Updated Email Template

--- a/SendMe/EmailTemplates/GeneralTemplate.html
+++ b/SendMe/EmailTemplates/GeneralTemplate.html
@@ -4,13 +4,13 @@
     <tr>
         <td align="center">
 
-            <a href="www.google.com"><img src="/Img/SendMe Banner.jpg" style="overflow: hidden; max-width: 100%"></a>
+            <a href="https://www.med.sc.edu"><img src="/Img/uscmed.png" style="overflow: hidden; max-width: 50%; float: left"></a>
 
         </td>
     </tr>
     <!------Body------>
     <tr>
-        <td align="left" style="background-color: #DADEE0; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5em; padding-top: 15%; padding-bottom: 15%">
+        <td align="left" style="background-color: #dbdbdb; text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5em; padding-top: 15%; padding-bottom: 15%">
 
                {Message}     
 
@@ -20,7 +20,7 @@
     <tr>
         <td align="center">
 
-            <a href="www.google.com"><img src="/Img/SendMe Footer.jpg" style="overflow: hidden; max-width: 100%"></a>
+            <a href="https://www.med.sc.edu"><img src="/Img/SendMe Footer.jpg" style="overflow: hidden; max-width: 100%"></a>
 
         </td>
     </tr>
